force-app/main/default/objects/aig_AI_Data_Source__c/aig_AI_Data_Source__c.object-meta.xml
<CustomObject>
    <label>AI Data Source</label>
    <nameField>
        <label>Data Source Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AI Data Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>