force-app/main/default/objects/aig_AI_Data_Source__c/fields/aig_Data_Impact_Level__c.field-meta.xml
<CustomField>
    <fullName>aig_Data_Impact_Level__c</fullName>
    <label>Data Impact Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>