force-app/main/default/objects/aig_AI_Data_Source__c/fields/aig_Data_Source_Owner__c.field-meta.xml
<CustomField>
    <fullName>aig_Data_Source_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person who owns this data source.</description>
    <label>Data Source Owner</label>
    <referenceTo>aig_AI_Stakeholder__c</referenceTo>
    <relationshipLabel>AI Data Sources</relationshipLabel>
    <relationshipName>AI_Data_Sources</relationshipName>
    <type>Lookup</type>
</CustomField>