force-app/main/default/objects/aig_AI_Data_Source__c/fields/aig_Field_Column__c.field-meta.xml
<CustomField>
    <fullName>aig_Field_Column__c</fullName>
    <label>Field/Column</label>
    <length>80</length>
    <type>Text</type>
</CustomField>