force-app/main/default/objects/aig_AI_Data_Source__c/fields/aig_Format__c.field-meta.xml
<CustomField>
    <fullName>aig_Format__c</fullName>
    <label>Structured Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSV</fullName>
            </value>
            <value>
                <fullName>JSON</fullName>
            </value>
            <value>
                <fullName>XML</fullName>
            </value>
            <value>
                <fullName>Excel</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>HTML</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Database</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>