force-app/main/default/objects/aig_AI_Data_Source__c/fields/aig_Object_Table__c.field-meta.xml
<CustomField>
    <fullName>aig_Object_Table__c</fullName>
    <label>Object/Table</label>
    <length>80</length>
    <type>Text</type>
</CustomField>