force-app/main/default/objects/aig_AI_Data_Source__c/fields/aig_Organization_Owner__c.field-meta.xml
<CustomField>
    <fullName>aig_Organization_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AI Data Sources</relationshipLabel>
    <relationshipName>aig_AI_Data_Sources</relationshipName>
    <type>Lookup</type>
</CustomField>