force-app/main/default/objects/aig_AI_Data_Source__c/fields/aig_Origin__c.field-meta.xml
<CustomField>
    <fullName>aig_Origin__c</fullName>
    <label>Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>