force-app/main/default/objects/aig_AI_Data_Source__c/fields/aig_Type__c.field-meta.xml
<CustomField>
    <fullName>aig_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Structured</fullName>
            </value>
            <value>
                <fullName>Unstructured</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>