force-app/main/default/objects/aig_AI_Data_Source__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>aig_Type__c</columns>
    <columns>aig_Origin__c</columns>
    <columns>aig_Classification__c</columns>
    <columns>aig_Data_Impact_Level__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>